<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pokedex</string>
    <string name="action_settings">Gustavo Castillo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pokemon">PokemonActivity</string>
    <string name="returnB">Return</string>
    <string name="Icon">Pokemon Icon</string>
    <string name="Search">Search</string>
    <string name="typeOne">Type 1</string>
    <string name="typeTwo">Type 2</string>
    <string name="NA">N/A</string>

</resources>
